# C--

./: .gitignore  CMakeLists.txt  README.md
backup/: CMakeLists2.txt  test.cpp
src/: cv_inference_pipeline.cpp  cv_inference_pipeline_model_face.cpp  cv_inference_pipeline_model_pose.cpp  main.cpp
